2020-12-08 [1.42 Bld 184]

- Change      : Output generated by MESSAGE to console is suppressed
                in quiet mode
- Addition    : Add configurable maximum include nesting level
- Addition    : add -q(uiet) command line switch to P2BIN and P2HEX
- Change      : 'make test' now runs in quiet mode on *IX systems, set V=1
                to get verbose output back
- Addition    : Optimize SUB #(-2...+2),... to ADD:Q only if Q format requested

2020-12-03 [1.42 Bld 183]

- Bugfix      : Disallow optimzation to CoMPare 8-bit immediate value with
                16-bit operand on H8/500

2020-11-26 [1.42 Bld 182]

- Bugfix      : Better treatment of (mis)detection of non-octal constants
                in relaxed mode
- Bugfix      : If whole instruction has dot prefix, still search for
                attribute in it

2020-11-25 [1.42 Bld 181]

- Addition    : Support :8 and :16 instruction formats for branches on H8/500
- Bugfix      : Some fixes to H'xxxx hex syntax on H8/500 and H8/300
- Bugfix      : correct TLCS-90 MUL/DIV with immediate addressing

2020-11-18 [1.42 Bld 180]

- Addition    : Support Toshiba TLCS-870/C as target
- Bugfix      : do not search relative to current file's path if (B)INCLUDEd
                file's path is absolute

2020-11-08 [1.42 Bld 179]

- Bugfix      : MCS-48: correctly regard forward references when checking
                memory bank of CALL/JMP target

2020-11-04 [1.42 Bld 178]

- Addition    : Add DW and DB as aliases for BYT/ADR for 68xx targets
- Addition    : Add MB assume value for MCS-48
- Bugfix      : fix -r option on p2bin and p2hex

2020-10-25 [1.42 Bld 177]

- Addition    : Add some 68xx instruction aliases used on other assemblers
- Addition    : new target: KENBAK

2020-10-19 [1.42 Bld 176]

- Addition    : bit symbols for H8/300 and H8/500
- Addition    : support half size (16 bit) floating point type

2020-10-02 [1.42 Bld 175]

- Addition    : register symbols for TLCS-9000