@@ -1,3 +1,8 @@
+2020-12-09 [1.42 Bld 185]
+
+- Addition    : Add compatibility mode switch for better compatibility
+                with original assemblers on certain targets
+
 2020-12-08 [1.42 Bld 184]
 
 - Change      : Output generated by MESSAGE to console is suppressed
